# iwe

./: .gitignore  .release-plz.toml  CLI_COMMANDS.md  CLI_QUICK_REFERENCE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  flake.nix
crates/cmd/: Cargo.toml
crates/cmd/src/: main.rs
crates/diwe/: CHANGELOG.md  Cargo.toml
crates/diwe/src/: config.rs  find.rs  fs.rs  lib.rs  loader.rs  operations.rs  retrieve.rs  schema.rs  search.rs  search_query.rs  stats.rs
crates/diwe/tests/: config_migration_test.rs  djot_fs_test.rs  gitignore_test.rs  nested_keys_test.rs  query_search.rs  search_test.rs  stats_test.rs  stats_warnings_test.rs  windows_paths_test.rs
crates/iwe/: CHANGELOG.md  Cargo.toml  README.md
crates/iwe/benches/: common.rs  load.rs  query.rs  similarity.rs
crates/iwe/benches/common/: mod.rs
crates/iwe/docs/: config.md  index.txt  query.md  schema.md
crates/iwe/help/attach/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/completions/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/contents/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/count/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/delete/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/docs/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/export/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/extract/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/find/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/init/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/inline/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/new/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/normalize/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/paths/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/rename/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/retrieve/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/schema/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/squash/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/stats/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/tree/: about.txt  after_help.txt  long_about.txt
crates/iwe/help/update/: about.txt  after_help.txt  long_about.txt
crates/iwe/src/: dot_details_exporter.rs  dot_exporter.rs  dot_exporter_2.rs  export.rs  export_dot.rs  filter_args.rs  find.rs  graph_data.rs  graph_processor.rs  graphviz_export.rs  help.rs  init.rs  json_export.rs  lib.rs  main.rs  new.rs  projection_args.rs  render.rs  retrieve.rs  schema.rs  selector.rs  stats.rs
crates/iwe/src/export/: dot_details_exporter.rs  dot_exporter.rs  exporter.rs  graph_colors.rs  graph_data.rs  json_exporter.rs
crates/iwe/src/find/: output.rs
crates/iwe/src/init/: agents.rs  detect.rs  evidence.rs  fit.rs  probe.rs  report.rs  screen.rs  settings.rs  writer.rs
crates/iwe/src/retrieve/: output.rs  render.rs
crates/iwe/src/stats/: key_statistics.rs
crates/iwe/templates/: find.md.jinja  stats.md.jinja
crates/iwe/tests/: attach_test.rs  cli_filter_test.rs  common.rs  completions_test.rs  contents_test.rs  delete_test.rs  docs_test.rs  export_dot_test.rs  export_graphviz_test.rs  export_test.rs  extract_test.rs  find_test.rs  graphviz_exporter_test.rs  init_test.rs  inline_test.rs  main.rs  new_test.rs  normalize_test.rs  paths_test.rs  rename_test.rs  retrieve_test.rs  schema_strict_test.rs  schema_test.rs  schema_validate_test.rs  squash_test.rs  stats_test.rs  stats_warnings_test.rs  tree_test.rs  update_test.rs
crates/iwe/tests/common/: mod.rs
crates/iwec/: CHANGELOG.md  Cargo.toml  README.md
crates/iwec/src/: lib.rs  main.rs  watcher.rs
crates/iwec/tests/: attach_test.rs  extract_test.rs  find_test.rs  fixture.rs  http_transport_test.rs  inline_test.rs  main.rs  normalize_test.rs  prompt_test.rs  query_test.rs  resource_test.rs  retrieve_test.rs  schema_test.rs  squash_test.rs  stats_test.rs  stats_warnings_test.rs  tree_test.rs  watcher_test.rs  write_test.rs
crates/iwes/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
crates/iwes/src/: lib.rs  main.rs  router.rs
crates/iwes/src/router/: server.rs
crates/iwes/tests/: attach_test.rs  change_list_type_test.rs  completion_test.rs  custom_actions_test.rs  delete_test.rs  did_change_test.rs  did_save_test.rs  extract_all_test.rs  extract_list_test.rs  extract_section_test.rs  extract_sub_sections_test.rs  extract_test.rs  fixture.rs  folding_range_test.rs  format_document_test.rs  go_to_definition_test.rs  hover_test.rs  inlay_hints_test.rs  inline_list_test.rs  inline_quote_test.rs  inline_section_test.rs  link_test.rs  list_to_sections_test.rs  main.rs  references_test.rs  rename_test.rs  sections_to_list_test.rs  sort_test.rs  transform_test.rs  unknown_method_test.rs  windows_real_workspace_test.rs  workspace_symbols_test.rs
crates/liwe/: CHANGELOG.md  Cargo.toml  README.md
crates/liwe/src/: action.rs  database.rs  djot.rs  find.rs  format.rs  fs.rs  graph.rs  key.rs  lib.rs  locale.rs  markdown.rs  model.rs  operations.rs  parser.rs  query.rs  retrieve.rs  schema.rs  search.rs  selector.rs  state.rs  stats.rs  tokens.rs
crates/liwe/src/djot/: reader.rs  writer.rs
crates/liwe/src/graph/: arena.rs  basic_iter.rs  builder.rs  change_key_iter.rs  (+26 more)
crates/liwe/tests/: blocks.rs  config_migration_test.rs  djot_roundtrip.rs  formatting_test.rs  frontmatter_title_test.rs  gitignore_test.rs  links_test.rs  main.rs  nested_keys_test.rs  normalization_escapes.rs  normalization_headers.rs  normalization_html.rs  normalization_lists.rs  normalization_metadata.rs  normalization_misc.rs  normalization_raw.rs  queries.rs  query_block_update.rs  query_blocks.rs  query_content_filter.rs  query_count.rs  query_delete.rs  query_deserialize.rs  query_filter_expression.rs  query_find.rs  query_graph.rs  query_reserved_prefix.rs  query_scores.rs  query_search.rs  query_update.rs  roundtrip_test.rs  search_test.rs  squash_test.rs  task_items_test.rs  toc_test.rs  windows_paths_test.rs
(+267 files in other folders)
