[workspace]
members = ["crates/liwe", "crates/iwe", "crates/iwes"]
resolver = "2"

[workspace.package]
authors = ["Dmytro Halichenko <dmytrohalichenko@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/iwe-org/iwe"
version = "0.0.27"

[workspace.dependencies]
liwe = { path = "./crates/liwe", version = "0.0.27" }
anyhow = "1.0.41"
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = "0.5.8"
env_logger = "0.11.1"
extend = "1.2.0"
futures = "0.3.30"
indoc = { version = "2", features = [] }
itertools = { version = "0.12.0", features = [] }
log = "0.4.20"
lsp-server = "0.7.6"
lsp-types = "0.95.1"
pretty_assertions = "1.4.0"
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "21.0.0"
rand = "0.8.4"
rayon = { version = "1.5.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
sha2 = "0.10.8"
assert-json-diff = "2.0.2"
difference = "2.0"
tracing = "0.1.40"
tracing-tree = "0.3.0"
fuzzy-matcher = "0.3.7"
relative-path = "1.9.3"
relative-path-utils = "0.2.0"
once_cell = "1.20.3"
minijinja = "2.8.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "registry",
    "fmt",
    "local-time",
    "std",
    "time",
    "tracing-log",
] }
