[workspace]
members = ["crates/liwe", "crates/iwe", "crates/iwes"]
resolver = "2"

[workspace.package]
authors = ["Dmytro Halichenko <dmytrohalichenko@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/iwe-org/iwe"
version = "0.0.58"

[workspace.dependencies]
reqwest = { version = "0.12.23", features = [
    "blocking",
    "json",
    "rustls-tls",
], default-features = false }
liwe = { path = "./crates/liwe", version = "0.0.58" }
anyhow = "1.0.99"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
extend = "1.2.0"
futures = "0.3.31"
indoc = { version = "2", features = [] }
itertools = { version = "0.14.0", features = [] }
log = "0.4.28"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "21.0.0"
rand = "0.9.2"
rayon = { version = "1.11.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
sha2 = "0.10.9"
assert-json-diff = "2.0.2"
difference = "2.0"
tracing = "0.1.41"
tracing-tree = "0.4.0"
fuzzy-matcher = "0.3.7"
relative-path = "2.0.1"
relative-path-utils = "0.3.1"
once_cell = "1.21.3"
minijinja = "2.12.0"
uuid = { version = "1.18.1", features = ["v4"] }
tempfile = "3.22"
graphviz-rust = "0.9.5"
toml_edit = "0.23.4"
chrono = "0.4.42"
sanitize-filename = "0.6.0"
url = "2.5.4"
percent-encoding = "2.3.1"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "registry",
    "fmt",
    "local-time",
    "std",
    "time",
    "tracing-log",
] }
ignore = "0.4"
csv = "1.3"
