[workspace]
members = ["crates/liwe", "crates/iwe", "crates/iwes", "crates/iwec"]
resolver = "2"

[workspace.package]
authors = ["Dmytro Halichenko <dmytrohalichenko@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/iwe-org/iwe"
version = "0.0.70"

[workspace.dependencies]
liwe = { path = "./crates/liwe", version = "0.0.70" }
iwe = { path = "./crates/iwe", version = "0.0.70" }
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5.15"
env_logger = "0.11.10"
extend = "1.2.0"
futures = "0.3.32"
indoc = { version = "2", features = [] }
itertools = { version = "0.14.0", features = [] }
log = "0.4.29"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.13.3"
pulldown-cmark-to-cmark = "22.0.0"
rand = "0.9.4"
rayon = { version = "1.12.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.7"
sha2 = "0.10.9"
assert-json-diff = "2.0.2"
difference = "2.0"
tracing = "0.1.44"
tracing-tree = "0.4.1"
fuzzy-matcher = "0.3.7"
relative-path = "2.0.1"
relative-path-utils = "0.3.1"
once_cell = "1.21.4"
minijinja = "2.19.0"
uuid = { version = "1.20.0", features = ["v4"] }
tempfile = "3.27"
graphviz-rust = "0.9.7"
toml_edit = "0.25.5"
chrono = { version = "0.4.44", features = ["unstable-locales"] }
sys-locale = "0.3"
sanitize-filename = "0.6.0"
url = "2.5.8"
percent-encoding = "2.3.2"
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "registry",
    "fmt",
    "local-time",
    "std",
    "time",
    "tracing-log",
] }
ignore = "0.4"
csv = "1.4"
serde_yaml = "0.9"
