[package]
name = "iwe"
description = "IWE CLI utility"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "tests/**/*.md", "templates/**/*", "help/**/*"]
autotests = false

version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "iwe"
path = "src/main.rs"

[dependencies]
liwe.workspace = true
indoc.workspace = true
clap.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
graphviz-rust.workspace = true
minijinja.workspace = true
csv.workspace = true
chrono.workspace = true
sys-locale.workspace = true
serde_yaml.workspace = true
sanitize-filename.workspace = true

[[test]]
name = "integration"
path = "tests/main.rs"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
