[package]
name = "iwec"
description = "IWE MCP server"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs"]
autotests = false

version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "iwec"
path = "src/main.rs"

[dependencies]
liwe.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
clap.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "net", "signal"] }
tokio-util = "0.7"
axum = "0.8"
rmcp = { version = "1", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "schemars"] }
schemars = "1.2"
notify = "8"
minijinja.workspace = true
chrono.workspace = true

[[test]]
name = "integration"
path = "tests/main.rs"

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
liwe.workspace = true
indoc.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "test-util", "net", "time"] }
rmcp = { version = "1", features = ["server", "client", "macros", "transport-io", "transport-async-rw", "transport-streamable-http-client-reqwest", "schemars"] }
anyhow = "1"
