[package]
name = "iwes"
description = "IWE LSP server"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "tests/**/*.md"]

version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "iwes"
path = "src/main.rs"

[dependencies]
liwe.workspace = true
indoc.workspace = true
clap.workspace = true
pretty_assertions.workspace = true
env_logger.workspace = true
itertools.workspace = true
log.workspace = true
futures.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
rand.workspace = true
extend.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
toml.workspace = true
relative-path.workspace = true
reqwest.workspace = true
once_cell.workspace = true
minijinja.workspace = true
uuid.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
difference.workspace = true
