[package]
name = "liwe"
description = "IWE core library"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "tests/**/*.md"]

version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "liwe"
path = "src/lib.rs"

[dependencies]
sha2.workspace = true
indoc.workspace = true
serde.workspace = true
pretty_assertions.workspace = true
itertools.workspace = true
log.workspace = true
futures.workspace = true
rayon.workspace = true
rand.workspace = true
pulldown-cmark.workspace = true
pulldown-cmark-to-cmark.workspace = true
fuzzy-matcher.workspace = true

[dev-dependencies]
env_logger.workspace = true
