[package]
name = "liwe"
description = "IWE core library"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "tests/**/*.md"]
autotests = false

version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "liwe"
path = "src/lib.rs"

[dependencies]
indoc.workspace = true
serde.workspace = true
itertools.workspace = true
log.workspace = true
rayon.workspace = true
rand.workspace = true
pulldown-cmark.workspace = true
pulldown-cmark-to-cmark.workspace = true
relative-path.workspace = true
toml.workspace = true
toml_edit.workspace = true
chrono.workspace = true
sys-locale.workspace = true
ignore.workspace = true
serde_yaml.workspace = true
minijinja.workspace = true
sanitize-filename.workspace = true
fuzzy-matcher.workspace = true
csv.workspace = true

[[test]]
name = "integration"
path = "tests/main.rs"

[dev-dependencies]
env_logger.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
