[package]
name = "liwe"
description = "IWE core library"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "tests/**/*.md"]
autotests = false

version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "liwe"
path = "src/lib.rs"

[features]
djot = ["dep:jotdown"]

[dependencies]
indoc.workspace = true
serde.workspace = true
itertools.workspace = true
log.workspace = true
rayon.workspace = true
regex.workspace = true
rand.workspace = true
pulldown-cmark.workspace = true
pulldown-cmark-to-cmark.workspace = true
jotdown = { workspace = true, optional = true }
relative-path.workspace = true
chrono.workspace = true
sys-locale.workspace = true
serde_yaml.workspace = true
minijinja.workspace = true
sanitize-filename.workspace = true
percent-encoding.workspace = true

[[test]]
name = "integration"
path = "tests/main.rs"
required-features = ["djot"]

[dev-dependencies]
env_logger.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
